--- a/app/src/main/res/layout/activity_my_notes.xml
+++ b/app/src/main/res/layout/activity_my_notes.xml
@@ -34,10 +34,11 @@
         tools:srcCompat="@drawable/ic_baseline_done_24"
         android:focusable="true"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        android:contentDescription="TODO" />
 
     <EditText
-        android:id="@+id/editTextTextMultiLine"
+        android:id="@+id/edtTextNote"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:ems="10"
